[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/gameplay_ui.gd" id="1"]

[node name="GameplayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 60.0

[node name="HBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Score: 0"

[node name="TimerLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "03:00"

[node name="NPCCounterLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "NPCs: 0/8"

[node name="NPCInfoPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VBox" type="VBoxContainer" parent="NPCInfoPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="NPCInfoPanel/VBox"]
layout_mode = 2
text = "NPC Name"

[node name="DetailsLabel" type="Label" parent="NPCInfoPanel/VBox"]
layout_mode = 2
text = "Click Inspect"
autowrap_mode = 2

[node name="BottomBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0

[node name="VBox" type="VBoxContainer" parent="BottomBar"]
layout_mode = 2

[node name="ToolBar" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
alignment = 1

[node name="InspectButton" type="Button" parent="BottomBar/ToolBar"]
layout_mode = 2
text = "Inspect"

[node name="ActionButtons" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
alignment = 1

[node name="PassButton" type="Button" parent="BottomBar/ActionButtons"]
layout_mode = 2
text = "PASS"

[node name="DetainButton" type="Button" parent="BottomBar/ActionButtons"]
layout_mode = 2
text = "DETAIN"
